--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <title>Бронирование билетов в кинотеатр</title>
     <!-- Подключение Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css  "
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com  " />
+    <link rel="preconnect" href="https://fonts.gstatic.com  " crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -28,7 +28,7 @@
     <!-- Стили футера -->
     <link rel="stylesheet" href="src/css/blocks/hall-scheme/hall-scheme.css" />
     <!-- Стили схемы зала (когда создадите) -->
-    <!-- Добавляйте другие CSS файлы блоков по мере необходимости -->
+    <link rel="stylesheet" href="src/css/blocks/day-selector/day-selector.css"> <!-- Стили селектора дней -->
   </head>
   <body class="body-client">
     <div class="container">
@@ -39,7 +39,9 @@
       </header>
 
       <main id="main-content">
-        <p>Загружается расписание...</p>
+        <div id="day-selector-container"></div>
+        <!-- Контейнер для кнопок дней недели -->
+        <div id="movies-container"><p>Загружается расписание...</p></div> <!-- Обернули в div с id="movies-container" -->
       </main>
 
       <footer class="border-top mt-3">
@@ -49,7 +51,7 @@
 
     <!-- Подключение Bootstrap JS -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      src="  https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js  "
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
