--- a/public/index.html
+++ b/public/index.html
@@ -4,35 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Бронирование билетов в кинотеатр</title>
-    <!-- Подключение Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css  "
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com  " />
-    <link rel="preconnect" href="https://fonts.gstatic.com  " crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com " crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,10..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <!-- Подключение наших кастомных CSS файлов по БЭМ -->
     <link rel="stylesheet" href="src/css/styles.css" />
     <!-- Глобальные стили -->
-    <link rel="stylesheet" href="src/css/blocks/movie-card/movie-card.css" />
-    <!-- Стили карточки фильма -->
-    <link rel="stylesheet" href="src/css/blocks/header/header.css" />
-    <!-- Стили хедера -->
-    <link rel="stylesheet" href="src/css/blocks/footer/footer.css" />
-    <!-- Стили футера -->
-    <link rel="stylesheet" href="src/css/blocks/hall-scheme/hall-scheme.css" />
-    <!-- Стили схемы зала (когда создадите) -->
-    <link rel="stylesheet" href="src/css/blocks/day-selector/day-selector.css"> <!-- Стили селектора дней -->
   </head>
   <body class="body-client">
-    <div class="container">
-      <header>
+    <div class="page-container">
+      <header class="header">
         <h1 class="header__logo">
           Идём<span class="header__logo-thin">в</span>кино
         </h1>
@@ -44,17 +28,11 @@
         <div id="movies-container"><p>Загружается расписание...</p></div> <!-- Обернули в div с id="movies-container" -->
       </main>
 
-      <footer class="border-top mt-3">
+      <footer class="footer">
         <p>&copy; 2025 Кинотеатр. Все права защищены.</p>
       </footer>
     </div>
 
-    <!-- Подключение Bootstrap JS -->
-    <script
-      src="  https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js  "
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
     <!-- Подключение нашего главного JS файла для гостевой части -->
     <script type="module" src="src/js/index.js"></script>
   </body>
